--- a/BlogApp/BlogApp.Model/BlogApp.Model.csproj
+++ b/BlogApp/BlogApp.Model/BlogApp.Model.csproj
@@ -8,4 +8,8 @@
     <Folder Include="ViewModel\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlogApp.Core\BlogApp.Core.csproj" />
+  </ItemGroup>
+
 </Project>
