Created custom authorization and session extension method.

--- a/BlogApp/BlogApp.UI/BlogApp.UI.csproj
+++ b/BlogApp/BlogApp.UI/BlogApp.UI.csproj
@@ -20,4 +20,8 @@
     <Folder Include="Areas\Admin\Views\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlogApp.Model\BlogApp.Model.csproj" />
+  </ItemGroup>
+
 </Project>
