--- a/BlogApp/BlogApp.UI/BlogApp.UI.csproj
+++ b/BlogApp/BlogApp.UI/BlogApp.UI.csproj
@@ -14,13 +14,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Admin\Controllers\" />
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Areas\Admin\Views\" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BlogApp.BLL\BlogApp.BLL.csproj" />
     <ProjectReference Include="..\BlogApp.Model\BlogApp.Model.csproj" />
   </ItemGroup>
 
