--- a/BlogApp/BlogApp.UI/appsettings.json
+++ b/BlogApp/BlogApp.UI/appsettings.json
@@ -4,5 +4,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "connectionString": "Server=.; Database=BlogAppDotNetCore; Trusted_Connection=True;"
   }
 }
