--- a/BlogApp/BlogApp.BLL/BlogApp.BLL.csproj
+++ b/BlogApp/BlogApp.BLL/BlogApp.BLL.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BlogApp.Core\BlogApp.Core.csproj" />
     <ProjectReference Include="..\BlogApp.DAL\BlogApp.DAL.csproj" />
     <ProjectReference Include="..\BlogApp.Model\BlogApp.Model.csproj" />
