--- a/BlogApp/BlogApp.Model/BlogApp.Model.csproj
+++ b/BlogApp/BlogApp.Model/BlogApp.Model.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BlogApp.Core\BlogApp.Core.csproj" />
   </ItemGroup>
 
